set01/problem08error.txt
problem08.c: In function 'sum_n_array':
problem08.c:21:20: error: expected ';' before ')' token
     for(i=0;i<n,i++)
                    ^
problem08.c:24:5: error: expected ';' before '}' token
     }
     ^
problem08.c: In function 'main':
problem08.c:35:27: warning: passing argument 2 of 'sum_n_array' makes pointer from integer without a cast [-Wint-conversion]
                           ^
problem08.c:18:5: note: expected 'int *' but argument is of type 'int'
 int sum_n_array(int n, int a[n])
     ^~~~~~~~~~~
problem08.c:36:14: warning: passing argument 2 of 'output' makes pointer from integer without a cast [-Wint-conversion]
     output(n,a[n],sum);
              ^
problem08.c:27:6: note: expected 'int *' but argument is of type 'int'
 void output(int n, int a[n],int sum)
      ^~~~~~
PS C:\Users\vaagd\c_activity\set01> cd "c:\Users\vaagd\c_activity\set01\" ; if ($?) { gcc problem08.c -o problem08 } ; if ($?) { .\problem08 }
problem08.c: In function 'sum_n_array':
problem08.c:21:20: error: expected ';' before ')' token
     for(i=0;i<n,i++)
                    ^
problem08.c:24:5: error: expected ';' before '}' token
     }